# content-mod-openenv

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  baseline_results.json  check_before_submit.sh  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py  verify_local.py
env/: __init__.py  grader.py  models.py  tasks.py
server/: app.py
