[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "content-moderation-openenv"
version = "1.0.0"
description = "Content Moderation OpenEnv — Trust & Safety Agent Environment"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "pyyaml==6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_id = "content-moderation-v1"
version = "1.0.0"
tasks = ["easy", "medium", "hard"]
reset_endpoint = "/reset"
step_endpoint = "/step"
state_endpoint = "/state"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]
